Add LinkedIn and PMI certificates to index.html

--- a/English/index.html
+++ b/English/index.html
@@ -345,7 +345,90 @@
               <a href="https://note.com/truth_wave/n/n525e4fbb9151" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
-
+  <li>
+            <strong>Linkedin：</strong>Develop the adaptability needed for the AI era
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/daec0f34-d4ae-4930-8207-5fbabfd47213" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/ne46e31ba0845" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>Microsoft：</strong>Fundamentals of Generative AI
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/18d93f10-7500-4408-b610-524a3ecd5760" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n1f31dd49129b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>PMI：</strong>Enhance Communication Skills with Generative AI
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/fa827f43-bd5b-4561-a44e-54b6242c8c6d" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/ne2df0d2749e8" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>Linledin：</strong>Demonstrating Social Intelligence in the AI Era
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/c969925a-51bc-4f37-9697-12904eec5ee8" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/nf5f639c9a77e" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>   
+          <li>
+            <strong>Linledin：</strong>Sharpen Critical Thinking with Generative AI
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/586d431e-74b7-4c89-884a-9b72c3b7fc3a" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n620fbd1a4726" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>Linledin：</strong>Enhancing Decision-Making Capabilities with Generative AI
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/c6c6c651-a4f1-4667-ab09-4eef05545b40" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/na258ebc74d66" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>Linledin：</strong>Incorporating Generative AI into Creative Production
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/8ffc4194-3459-4246-b174-e7f60bbdc656" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n4e1ae7cb168a" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>Microsoft：</strong>Human Skills in the AI Era
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/25edf4b7-3495-46e7-b193-34e234097e37" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n9ec697ac6803" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>Linledin：</strong>Learn in 1 Minute: Top 10 Handy ChatGPT Tips
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/dd026304-87a8-4dd6-a82f-2fe03adac415" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n6a367aea007b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>PMI：</strong>Incorporating Generative AI into Business Strategy
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/8c1d5ea8-f82f-468f-8c41-3b2e0b49e3a3" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n9137557d385e" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>PMI：</strong>Generative AI for Business Leaders
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/93a532d4-60b6-461b-b4f4-2efd62fc75e3" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/nc8e2754b7ffc" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>PMI：</strong>Build a team at the forefront of AI innovation
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/664fb368-db83-466e-ba5b-f187defc927d" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n1ce92e55e49c" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           <li><strong>Tech Stack:</strong> Next.js, Tailwind CSS, Supabase, OpenAI API, Vercel</li>
         </ul>
         <div class="external-links">
