Add certification and note links to index.html

--- a/index.html
+++ b/index.html
@@ -459,6 +459,13 @@
             </div>
           </li>
           <li>
+            <strong>PMI 認定：</strong>リーダーシップにおけるAI活用の課題とチャンス
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/8ec23df1-2c69-467f-8031-9dc658ff2674" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/nf69e8d22f5e0" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
