Add LinkedIn certification section to index.html
Added LinkedIn certification information and related links.

--- a/index.html
+++ b/index.html
@@ -466,6 +466,13 @@
             </div>
           </li>
           <li>
+          <li>
+            <strong>Linledin 認定：</strong>リーダーとして組織のAI能力を高める
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/26f130b0-3748-4c08-8dc6-fb60e3767129" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n6e8fda4a155d" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
