Add PMI certification links to index.html

--- a/index.html
+++ b/index.html
@@ -367,6 +367,13 @@
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>PMI 認定：</strong>AI 入門
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/67e47116-02dd-4cb2-b474-749b2c22e53c" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n7dbac012c44b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <li>
             <strong>Linkedin 認定：</strong>AI時代に求められるヒューマンスキル
             <div class="trust-links">
