Add PMI Certification details to index.html
Added PMI Certification section with links to certificate and note.

--- a/English/index.html
+++ b/English/index.html
@@ -339,6 +339,13 @@
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>PMI Certification:</strong> Introduction to AI
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/67e47116-02dd-4cb2-b474-749b2c22e53c" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n7dbac012c44b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <li><strong>LinkedIn:</strong> Human Skills Required in the AI Era
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/94f9ba0d-9c76-440b-beb7-475dc98bd5cd" target="_blank" rel="noopener noreferrer">Certificate</a> /
