Add Microsoft certification links to index.html

--- a/index.html
+++ b/index.html
@@ -360,6 +360,13 @@
               <a href="https://note.com/truth_wave/n/nd539c236b9ac" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Microsoft 認定：</strong>生成 AI とエージェントの概要
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/4db07626-1454-4031-8615-887296a2e9a2" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n35ca32ce157c" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
            <li>
             <strong>日本AIスキル認定協会 認定：</strong>AIスキル検定初級
             <div class="trust-links">
