Add Microsoft Certified section to index.html

--- a/English/index.html
+++ b/English/index.html
@@ -333,6 +333,13 @@
             <a href="https://github.com/truthwave/ethical-genai-practices/tree/main/English" target="_blank" rel="noopener">GitHub</a>
             </div>
           </li>
+          <li>
+            <strong>Microsoft Certified:</strong> Generative AI and Agents Overview
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/4db07626-1454-4031-8615-887296a2e9a2" target="_blank" rel="noopener noreferrer">Certification</a> /
+              <a href="https://note.com/truth_wave/n/n35ca32ce157c" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
       　　　<li><strong>Japan AI Skills Certification Association:</strong> AI Skills Certification - Beginner Level
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">Certificate</a> /
