Add Microsoft 365 Copilot certification link

--- a/index.html
+++ b/index.html
@@ -381,6 +381,13 @@
               <a href="https://note.com/truth_wave/n/n7dbac012c44b" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Linledin 認定：</strong>Microsoft 365 Copilot 入門 (2024)
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/2318b0f0-885f-449c-8e86-8365b2825f30" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/ne66613bb11be" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <li>
             <strong>Linkedin 認定：</strong>AI時代に求められるヒューマンスキル
             <div class="trust-links">
