--- a/English/index.html
+++ b/English/index.html
@@ -353,6 +353,13 @@
               <a href="https://note.com/truth_wave/n/n7dbac012c44b" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>LinkedIn Certified:</strong> Microsoft 365 Copilot Fundamentals (2024)
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/2318b0f0-885f-449c-8e86-8365b2825f30" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/ne66613bb11be" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <li><strong>LinkedIn:</strong> Human Skills Required in the AI Era
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/94f9ba0d-9c76-440b-beb7-475dc98bd5cd" target="_blank" rel="noopener noreferrer">Certificate</a> /
