Add PMI certification links to index.html

--- a/index.html
+++ b/index.html
@@ -494,6 +494,13 @@
               <a href="https://note.com/truth_wave/n/n6e8fda4a155d" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>PMI 認定：</strong>組織で責任あるAIを主導する
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/f54bd9ba-8be8-4dfc-80ff-4cd2925f7972" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n70f2b6e0f1b3" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
