--- a/English/index.html
+++ b/English/index.html
@@ -354,6 +354,13 @@
             </div>
           </li>
           <li>
+            <strong>LinkedIn Certified:</strong> Streamline Your Work with Microsoft Copilot
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/0d8d51fd-c0cc-4827-ab44-aee1779f3f87" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n122017481570" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
             <strong>LinkedIn Certified:</strong> Microsoft 365 Copilot Fundamentals (2024)
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/2318b0f0-885f-449c-8e86-8365b2825f30" target="_blank" rel="noopener noreferrer">Certificate</a> /
