--- a/English/index.html
+++ b/English/index.html
@@ -457,6 +457,27 @@
               <a href="https://note.com/truth_wave/n/n1ce92e55e49c" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>PMI Certification:</strong> Challenges and Opportunities in AI Adoption for Leadership
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/8ec23df1-2c69-467f-8031-9dc658ff2674" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/nf69e8d22f5e0" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>LinkedIn Certification:</strong> Enhancing Your Organization's AI Capabilities as a Leader
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/26f130b0-3748-4c08-8dc6-fb60e3767129" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n6e8fda4a155d" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
+            <strong>PMI Certification:</strong> Leading Responsible AI in Organizations
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/f54bd9ba-8be8-4dfc-80ff-4cd2925f7972" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n70f2b6e0f1b3" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           <li><strong>Tech Stack:</strong> Next.js, Tailwind CSS, Supabase, OpenAI API, Vercel</li>
         </ul>
         <div class="external-links">
