--- a/index.html
+++ b/index.html
@@ -374,6 +374,13 @@
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+           <li>
+            <strong>PMI 認定：</strong>生成AI：進化した思考型オンライン検索
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/d017d90d-e68f-4945-8906-3419ff665ad9"" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/ne9a80215f20b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           <li>
             <strong>PMI 認定：</strong>AI 入門
             <div class="trust-links">
