--- a/English/index.html
+++ b/English/index.html
@@ -346,6 +346,13 @@
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+           <li>
+            <strong>PMI Certification:</strong> Generative AI: The Next Generation of Intelligent Online Search
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/d017d90d-e68f-4945-8906-3419ff665ad9"" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/ne9a80215f20b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           <li>
             <strong>PMI Certification:</strong> Introduction to AI
             <div class="trust-links">
