--- a/index.html
+++ b/index.html
@@ -374,6 +374,13 @@
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Linledin 認定：</strong>生成AIとは
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/cce80565-38cb-43ba-8bf0-9e63c6ec1cfc" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/nf883f2930645" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
            <li>
             <strong>PMI 認定：</strong>生成AI：進化した思考型オンライン検索
             <div class="trust-links">
