--- a/English/index.html
+++ b/English/index.html
@@ -346,7 +346,14 @@
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
-           <li>
+          <li>
+            <strong>LinkedIn Certified:</strong> What is Generative AI?
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/cce80565-38cb-43ba-8bf0-9e63c6ec1cfc" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/nf883f2930645" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
             <strong>PMI Certification:</strong> Generative AI: The Next Generation of Intelligent Online Search
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/d017d90d-e68f-4945-8906-3419ff665ad9"" target="_blank" rel="noopener noreferrer">Certificate</a> /
