Add LinkedIn certification details to index.html

--- a/index.html
+++ b/index.html
@@ -354,6 +354,13 @@
             </div>
           </li>
           <li>
+            <strong>Linledin 認定：</strong>PowerPoint：Copilotでスライドを作成する
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/ff4524ee-b609-42a8-953b-d93fd7ebb29f" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/na9a2deb2049a" target="\_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
             <strong>PMI 認定：</strong>生成AI時代の倫理
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener noreferrer">認定証</a> /
