--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
           <li>
             <strong>Linledin 認定：</strong>PowerPoint：Copilotでスライドを作成する
             <div class="trust-links">
-              <a href="https://github.com/user-attachments/assets/ff4524ee-b609-42a8-953b-d93fd7ebb29f" rel="noopener noreferrer">認定証</a> /
-              <a href="https://note.com/truth_wave/n/na9a2deb2049a" target="\_blank" rel="noopener noreferrer">note</a>
+              <a href="https://github.com/user-attachments/assets/ff4524ee-b609-42a8-953b-d93fd7ebb29f" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/na9a2deb2049a" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
