--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>PowerPoint：Copilotでスライドを作成する
+            <strong>Linkedin 認定：</strong>PowerPoint：Copilotでスライドを作成する
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/ff4524ee-b609-42a8-953b-d93fd7ebb29f" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/na9a2deb2049a" target="_blank" rel="noopener noreferrer">note</a>
@@ -382,7 +382,7 @@
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>生成AIとは
+            <strong>Linkedin 認定：</strong>生成AIとは
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/cce80565-38cb-43ba-8bf0-9e63c6ec1cfc" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/nf883f2930645" target="_blank" rel="noopener noreferrer">note</a>
@@ -403,14 +403,14 @@
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>Microsoft Copilotで業務を効率化する
+            <strong>Linkedin 認定：</strong>Microsoft Copilotで業務を効率化する
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/0d8d51fd-c0cc-4827-ab44-aee1779f3f87" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n122017481570" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>Microsoft 365 Copilot 入門 (2024)
+            <strong>Linkedin 認定：</strong>Microsoft 365 Copilot 入門 (2024)
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/2318b0f0-885f-449c-8e86-8365b2825f30" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/ne66613bb11be" target="_blank" rel="noopener noreferrer">note</a>
@@ -445,28 +445,28 @@
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>AI時代に社会的知性を発揮する
+            <strong>Linkedin 認定：</strong>AI時代に社会的知性を発揮する
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/c969925a-51bc-4f37-9697-12904eec5ee8" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/nf5f639c9a77e" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>   
           <li>
-            <strong>Linledin 認定：</strong>生成AIでクリティカルシンキングを鍛える
+            <strong>Linkedin 認定：</strong>生成AIでクリティカルシンキングを鍛える
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/586d431e-74b7-4c89-884a-9b72c3b7fc3a" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n620fbd1a4726" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>生成AIで意思決定力を強化する
+            <strong>Linkedin 認定：</strong>生成AIで意思決定力を強化する
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/c6c6c651-a4f1-4667-ab09-4eef05545b40" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/na258ebc74d66" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>生成AIをクリエイティブ制作にとり入れるには
+            <strong>Linkedin 認定：</strong>生成AIをクリエイティブ制作にとり入れるには
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/8ffc4194-3459-4246-b174-e7f60bbdc656" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n4e1ae7cb168a" target="_blank" rel="noopener noreferrer">note</a>
@@ -480,7 +480,7 @@
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>１分で学ぶ：ChatGPTの便利技BEST 10
+            <strong>Linkedin 認定：</strong>１分で学ぶ：ChatGPTの便利技BEST 10
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/dd026304-87a8-4dd6-a82f-2fe03adac415" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n6a367aea007b" target="_blank" rel="noopener noreferrer">note</a>
@@ -515,7 +515,7 @@
             </div>
           </li>
           <li>
-            <strong>Linledin 認定：</strong>リーダーとして組織のAI能力を高める
+            <strong>Linkedin 認定：</strong>リーダーとして組織のAI能力を高める
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/26f130b0-3748-4c08-8dc6-fb60e3767129" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n6e8fda4a155d" target="_blank" rel="noopener noreferrer">note</a>
