--- a/English/index.html
+++ b/English/index.html
@@ -327,6 +327,13 @@
             <a href="https://github.com/truthwave/ai-productivity-cert-practical-output/tree/main/English" target="_blank" rel="noopener">GitHub</a>
            </div>
           </li>
+          <li>
+            <strong>LinkedIn Certification:</strong> PowerPoint: Create slides with Copilot
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/ff4524ee-b609-42a8-953b-d93fd7ebb29f" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/na9a2deb2049a" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           <li><strong>PMI Certified:</strong>Ethics in the Generative AI Era
             <div class="trust-links">
             <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener">Certificate</a> /
@@ -409,28 +416,28 @@
             </div>
           </li>
           <li>
-            <strong>Linledin Certified：</strong>Demonstrating Social Intelligence in the AI Era
+            <strong>LinkedIn Certified：</strong>Demonstrating Social Intelligence in the AI Era
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/c969925a-51bc-4f37-9697-12904eec5ee8" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/nf5f639c9a77e" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>   
           <li>
-            <strong>Linledin Certified：</strong>Sharpen Critical Thinking with Generative AI
+            <strong>LinkedIn Certified：</strong>Sharpen Critical Thinking with Generative AI
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/586d431e-74b7-4c89-884a-9b72c3b7fc3a" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/n620fbd1a4726" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>Linledin Certified：</strong>Enhancing Decision-Making Capabilities with Generative AI
+            <strong>LinkedIn Certified：</strong>Enhancing Decision-Making Capabilities with Generative AI
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/c6c6c651-a4f1-4667-ab09-4eef05545b40" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/na258ebc74d66" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>Linledin Certified：</strong>Incorporating Generative AI into Creative Production
+            <strong>LinkedIn Certified：</strong>Incorporating Generative AI into Creative Production
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/8ffc4194-3459-4246-b174-e7f60bbdc656" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/n4e1ae7cb168a" target="_blank" rel="noopener noreferrer">note</a>
@@ -444,7 +451,7 @@
             </div>
           </li>
           <li>
-            <strong>Linledin Certified：</strong>Learn in 1 Minute: Top 10 Handy ChatGPT Tips
+            <strong>LinkedIn Certified：</strong>Learn in 1 Minute: Top 10 Handy ChatGPT Tips
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/dd026304-87a8-4dd6-a82f-2fe03adac415" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/n6a367aea007b" target="_blank" rel="noopener noreferrer">note</a>
